WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69670
[Qt] [WK2] Wrong handling of visibility in QTouchWebPage
https://bugs.webkit.org/show_bug.cgi?id=69670
Summary
[Qt] [WK2] Wrong handling of visibility in QTouchWebPage
Viatcheslav Ostapenko
Reported
2011-10-07 14:33:48 PDT
Handling of QEvent::Show and QEvent::Hide events doesn't cover all cases of SGItem visibility changes. QSGItem::visibleChanged signal should be used instead.
Attachments
Fix handling of QTouchWebPage visibility.
(2.72 KB, patch)
2011-10-07 14:42 PDT
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2011-10-07 14:42:31 PDT
Created
attachment 110218
[details]
Fix handling of QTouchWebPage visibility.
Andreas Kling
Comment 2
2011-10-08 07:33:44 PDT
Comment on
attachment 110218
[details]
Fix handling of QTouchWebPage visibility. r=me
WebKit Review Bot
Comment 3
2011-10-08 08:36:30 PDT
Comment on
attachment 110218
[details]
Fix handling of QTouchWebPage visibility. Clearing flags on attachment: 110218 Committed
r97010
: <
http://trac.webkit.org/changeset/97010
>
WebKit Review Bot
Comment 4
2011-10-08 08:36:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug