[Qt] [WK2] Wrong handling of visibility in QTouchWebPage https://bugs.webkit.org/show_bug.cgi?id=69670

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-10-08
Reviewed by Andreas Kling.

Replace QTouchWebPage visibility handling by Show/Hide events with use of
QSGItem::visibleChanged signal.

* UIProcess/API/qt/qtouchwebpage.cpp:
(QTouchWebPage::QTouchWebPage):
(QTouchWebPage::event):
(QTouchWebPage::onVisibleChanged):
* UIProcess/API/qt/qtouchwebpage.h:

Canonical link: https://commits.webkit.org/85760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97010 268f45cc-cd09-0410-ab3c-d52691b4dbfc