Source/WebKit2/UIProcess/API/qt/qtouchwebpage.h
@@ -72,6 +72,9 @@ Q_SIGNALS:
     void loadFailed(QTouchWebPage::ErrorType errorType, int errorCode, const QUrl& url);
     void loadProgressChanged(int progress);
 
+protected Q_SLOTS:
+    void onVisibleChanged();
+
 protected:
     virtual void keyPressEvent(QKeyEvent*);
     virtual void keyReleaseEvent(QKeyEvent*);
